data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_916.wast
;; 7. **Test: Loop and Recursive Function Calls**     - Description: Implement a loop instruction that calls a recursive function. The function should include a base case to terminate recursion. Verify that the recursive function handles proper return values and does not cause infinite loops.     - Constraint: Ensures recursive calls are correctly returned within loop blocks, verifying stack and control flow integrity.

(assert_invalid
 (module
  (func $recursiveFunc (param i32) (result i32)
   (local i32)
   (local.get 0)
   (i32.const 1)
   (i32.sub)
   (br_if 0 (local.get 0))
   (i32.const 0)
  )
  (func (result i32)
   (i32.const 5)
   (loop (param i32) (result i32)
    (call $recursiveFunc)
   )
  )
 )
 "type mismatch"
)